2006-04-24 Raphael Neider <rneider AT web.de>

	* src/pic/pcoderegs.c (OptimizeRegUsage): do not optimize
	    registers that have not been assigned proper liveranges,
	    fixes #1469504 and #1474602,
	  (pCodeRegOptimizeRegUsage): fixed typo in comment

2006-04-24 Borut Razem <borut.razem AT siol.net>

	* device/examples/main8051.c: deleted - it was removed from CVS
	  24.mar.2000 and after that modified 18.feb.2001, so it reappered
	  after the transition to Subversion 
	* src/SDCCalloc.h: deleted - it was removed  from CVS
	  3.feb.2001 and after that modified 18.feb.2001, so it reappered
	  after the transition to Subversion 
	* sim/ucsim/cpu.gif, sim/ucsim/interrupt.gif, sim/ucsim/new.gif, 
	  sim/ucsim/serial1.gif, sim/ucsim/serial2.gif,
	  sim/ucsim/term_cpuopt.gif, sim/ucsim/timers.gif, sim/ucsim/wins.gif,
	  sim/ucsim/post.jpg, sim/ucsim/UCsim.jpg: corrected

2006-04-22 Maarten Brock <sourceforge.brock AT dse.nl>

	* as/asx8051.dsp: added mcs51/strcmpi.h
	* as/hc08/as_hc08.dsp: added asm.h, m6808.h, strcmpi.h
	* as/hc08/aslink.h: updated lnksect prototype
	* as/hc08/asm.h,
	* as/mcs51/asm.h: added a_addr to struct area and s_org to struct sym
	* as/hc08/asmain.c,
	* as/mcs51/asmain.c (asmbl): init dot.s_org for S_ORG,
	  (newdot): handle A_ABS
	* as/hc08/asout.c,
	* as/mcs51/asout.c (outarea): output address
	* as/hc08/lkaomf51.c,
	* as/mcs51/lkaomf51.c: disabled unused array UsageType
	* as/hc08/m08pst.c,
	* as/mcs51/i51pst.c,
	* as/z80/z80pst.c: "ABS" is not A_OVR
	* as/hc08/lkarea.c (newarea): read a_addr,
	  (lnkarea): added codemap array, sort absolute areas to the front,
	   combine all GSINITx/GSFINAL,
	  (find_empty_space, allocate_space): new functions,
	  (lnksect): return next address, handle absolute sections
	* as/mcs51/lkarea.c (newarea): read a_addr,
	  lnksect2 prototype changed,
	  (lnkarea2): define codemap unsigned, combine all GSINITx/GSFINAL,
	  (find_empty_space, allocate_space): new, factored out of lnksect2,